<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillento"
    android:orientation="vertical"
    tools:context=".CodigoIncorrecto">


    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="263dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="5dp"
        android:background="@color/naranjaClaro"
        android:orientation="vertical">

        <TextView
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/codigoIncorrecto"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_volverEnviar"
            android:layout_width="219dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/volverEnviar"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_regresar"
            android:layout_width="219dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/regresar"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>