<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="3pt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombre_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/txtNombreCuenta"
            android:fontFamily="@font/inter_regular"
            android:textSize="12sp"
            android:textColor="@color/naranja" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/naranja"
            android:textColor="@color/naranja"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

        <ListView
            android:id="@+id/ls_platillos"
            android:layout_width="367dp"
            android:layout_height="111dp"
            android:layout_marginStart="15dp">

        </ListView>

        <Button
            android:id="@+id/btn_cuenta_ordenar"
            android:layout_width="219dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/ordenar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/btn_cuenta_cobrar"
            android:layout_width="219dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/cobrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="5dp" />


    </LinearLayout>
</LinearLayout>