<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranjaClaro"
    android:orientation="vertical"
    tools:context=".MenuPrincipal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tituloMenuPpal"
        android:fontFamily="@font/inter_bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/round_view"
            android:backgroundTint="@color/amarillento">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="Mesa 1"
                android:fontFamily="@font/inter_bold"
                android:textSize="16sp"
                android:textColor="@color/naranja"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:background="@drawable/round_view"
            android:backgroundTint="@color/amarillento"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:gravity="center"
                android:text="Mesa 3"
                android:fontFamily="@font/inter_bold"
                android:textSize="20sp"
                android:textColor="@color/naranja"/>

            <TextView
                android:id="@+id/tvOrden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ordenLista"
                android:fontFamily="@font/inter_bold"
                android:textSize="13sp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/round_view"
            android:backgroundTint="@color/amarillento">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="Mesa 5"
                android:fontFamily="@font/inter_bold"
                android:textSize="16sp"
                android:textColor="@color/naranja"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btnOrdenar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/ordenar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/ordenar"
        android:textSize="15sp"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="5dp"/>


    <Button
        android:id="@+id/btn_cerrarSesion"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/cerrarSesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"/>
</LinearLayout>